introduce FuzzyMatcher to allow more complex completions like intellij (cman -> ContextManager)